--- a/THtaobancocaro.html
+++ b/THtaobancocaro.html
@@ -20,7 +20,7 @@
     for (let i = 0; i < 5; i++) {
         data += "<br/>";
         for (let j = 0; j < 5; j++) {
-            data += board[i][j] + "&nbsp&nbsp;";
+            data += board[i][j] + "&nbsp&nbsp";
         }
     }
 
