--- a/BTtudien.html
+++ b/BTtudien.html
@@ -15,11 +15,16 @@
         let input = document.getElementById("input").value;
         let Eng = ["Hello","Bye","code"];
         let Viet = ["Xin chào","Tạm biệt","mã"];
+        let check = true;
         for (let i = 0; i < Eng.length; i++) {
             if (Eng[i] === input){
                 document.getElementById("display").innerText=(Viet[i]);
+                check = false;
                 break;
             }
+        }
+        if (check){
+            document.getElementById("display").innerText=("Không tìm thấy!");
         }
     }
 </script>
